# django_task_manager

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: consumers.py  routing.py  utils.py  views.py
core/templates/: home.html
core/templates/layout/: base.html
django_task_manager/: __init__.py  asgi.py  celery.py  settings.py  urls.py
manager/: apps.py
nginx/: nginx.conf
nginx/conf.d/: site.conf
schemated/: admin.py  apps.py  mixins.py  models.py
schemated/migrations/: 0001_initial.py  0002_order_delivery_order_taxes_order_total_price.py  0003_preorder.py
tasks/: daemon.py  jobs.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_active.py  0003_alter_task_description_alter_task_pid.py
tasks/templates/tasks/: task_detail.html  task_form.html  task_list.html
